# markdown233

./: .gitignore  README.md  index.html  install.ps1  install.sh  package-lock.json  package.json
.github/workflows/: release.yml
docs/: index.html  plugins.html  releases.html  themes.html
scripts/: e2e-screenshot.mjs  generate-updater-manifest.mjs  install.ps1  install.sh  release-signed.ps1  release-signed.sh  release.ps1  release.sh
src/: i18n.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/locales/: ar.json  de.json  en.json  es.json  fr.json  hi.json  ja.json  ko.json  pt-BR.json  ru.json  zh-CN.json  zh-TW.json
