[package]
name = "markdown233"
version = "0.2.1"
description = "A cross-platform Markdown editor like Typora"
authors = ["you"]
edition = "2021"

[lib]
name = "markdown233_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = [] }
tauri-plugin-opener = "2.5.4"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.19"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
codegen-units = 16
lto = false
opt-level = "z"
panic = "abort"
strip = true
